--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
@@ -25,9 +25,22 @@
             </li>
         </ul>
     </nav>
-    <!-- TODO: Banner Image here-->
+    <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li>San Diego</li>
+            <li>San Clemente</li>
+            <li>Catalina Island</li>
+            <li>Manatan Beach</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img id=about alt=about src="assets/images/about.jpg">
+        <p>I decided to open up my restaurant in San Diego of all places because it truly is the best city in America. As a San Diego native
+            I felt it was my duty to give the locals and tourists a taste of this exquisite cuisine.
+        </p> 
     </main>
 </body>
 </html>
