--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- CONTACT PAGE -->
@@ -25,7 +25,7 @@
             </li>
         </ul>
     </nav>
-    <!-- TODO: Banner Image here-->
+    <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -35,7 +35,14 @@
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
         <h2>Contact Info</h2>
-        <p>
+        <h2>(619)799-9110</h2>
+        <i class="fa fa-phone" aria-hidden="true"></i>
+        <h2>1024 Balboa Ave Ste 205
+            San Diego CA 92143</h2>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <h2>hthaimlcs@gmail.com</h2>
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+         <p>
             <strong>Phone Number:</strong> TBD
         </p>
     </main>
