--- a/index.html
+++ b/index.html
@@ -25,10 +25,21 @@
                 </li>
             </ul>
         </nav>
-    <!-- TODO: Banner Image here-->
+        <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
-        <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <h1>H-Thai-ML</h1>
+        <h2>Get it?</h2>
+        <div class="service">
+            <h3>Dine In</h3>
+        </div>
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
+        <img id=table alt="table" src="assets/images/table-in-restaurant.jpg"
     </main>
 </body>
 </html>
