--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="service">
             <h3>Delivery</h3>
         </div>
-        <img id=table alt="table" src="assets/images/table-in-restaurant.jpg"
+        <img id=table alt="table" src="assets/images/table-in-restaurant.jpg">
     </main>
 </body>
 </html>
